unpackaged/main/default/objects/PagesApi__Site_Template__c/PagesApi__Site_Template__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom site templates built for Fonteva Communities.</description>
    <label>Site Template</label>
</CustomObject>