unpackaged/main/default/objects/PagesApi__Site_Template__c/fields/PagesApi__Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Apex_Class__c</fullName>
    <label>Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>