unpackaged/main/default/objects/PagesApi__Site_Template__c/fields/PagesApi__Configuration_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Configuration_Fieldset__c</fullName>
    <label>Configuration Field Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>