unpackaged/main/default/objects/PagesApi__Site_Template__c/fields/PagesApi__Description__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>