unpackaged/main/default/objects/PagesApi__Site_Template__c/fields/PagesApi__Display_Name__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Display_Name__c</fullName>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>