unpackaged/main/default/objects/PagesApi__Site_Template__c/fields/PagesApi__Form_VF_Page__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Form_VF_Page__c</fullName>
    <label>Form VF Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>