unpackaged/main/default/objects/PagesApi__Site_Template__c/fields/PagesApi__Image_Path__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Image_Path__c</fullName>
    <label>Image Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>