unpackaged/main/default/objects/PagesApi__Site_Template__c/fields/PagesApi__Namespace__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Namespace__c</fullName>
    <label>Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>